@@ -7,6 +7,7 @@
 	* base, flow: added support for multi-accept
 	Must be enabled at compilation time via -DWITH_MULTI_ACCEPT=ON.
 	* flow: ruby-1.9 alike named parameter association.
+	* flow: Added new read-property `req.query`.
 	* core: Introduce severities: crit, alert, emerg.
 	* core: Support SO_REUSEPORT (as introduced in Linux Kernel 3.9.0, and
 			supported by other UNIX OSes already)
